ej02 sigue incompleto

--- a/Practicas/Ej02/DiarioLN.html
+++ b/Practicas/Ej02/DiarioLN.html
@@ -8,13 +8,11 @@
 
 	<body>
 	   <div id= encabezado>
-	 	<a href="http://lanacion.com"><strong>LA NACION</strong></a> |
-	 	<a href="http://lanacion.com/tecnologia"><strong>TECNOLOGÍA</strong></a> |
-	 	<a href="http://lanacion.com/tecnologia">TECNOLOGÍA</a>
+	 	<a href="http://lanacion.com"><strong>LA NACION</strong></a> | <a href="http://lanacion.com/tecnologia"> <strong>TECNOLOGÍA</strong></a> | <a href="http://lanacion.com/tecnologia"> TECNOLOGÍA</a>
 		<h1>Japón planea tener el rascacielos de madera más alto del mundo en Tokio</h1>
 	   </div>
      
-       <div id= piefoto1>
+       <div class= "bloque1" id= piefoto1>
 	     <img src="imgs/foto1.jpg" alt="imagen1">
 	     <p>Tendrá 350 metros de altura y será la más alta en su tipo, con una construcción cuya estructura combina nueve partes de madera y una de acero</p>
 	   </div>
@@ -34,7 +32,7 @@
 	    Cuando finalice, la torre de Sumitomo Forestry no sólo será la más alta del mundo, sino que también superará a los rascacielos tradicionales de todo Japón.</p>
 	   </div>
 
-	   <div id= piefoto2>
+	   <div class="bloque1" id= piefoto2>
 	 	 <img src="imgs/foto2.jpg" alt="foto2">
 	     <p>El proyecto deberá superar las estrictas normas japonesas que restringen el uso de la madera para evitar incendios</p>
 	   </div>
