--- a/Practicas/Ej02/DiarioLN.html
+++ b/Practicas/Ej02/DiarioLN.html
@@ -23,7 +23,7 @@
 	   </div>
 	 
 	   <div id="texto">
-	 	 <p>El constructor y desarrollador inmobiliario <a href="http://sfc.jp/english/business/">Sumitomo Forestry</a>, especializado en la industria forestal, planea tener para las próximas décadas el ambicioso objetivo de desarrollar un torre rascacielos de 350 metros de altura. Como referencia, el edificio más alto de Buenos Aires será el Alvear Tower, una construcción tradicional de 235 metros, mientras que el edificio más alto de madera es el Brock Commons Tallwood House, un edificio de 53 metros de altura ubicado en la Universidad de Columbia Británica en Vancouver, Canadá.
+	 	 <p><span class="capital">E</span>l constructor y desarrollador inmobiliario <a href="http://sfc.jp/english/business/">Sumitomo Forestry</a>, especializado en la industria forestal, planea tener para las próximas décadas el ambicioso objetivo de desarrollar un torre rascacielos de 350 metros de altura. Como referencia, el edificio más alto de Buenos Aires será el Alvear Tower, una construcción tradicional de 235 metros, mientras que el edificio más alto de madera es el Brock Commons Tallwood House, un edificio de 53 metros de altura ubicado en la Universidad de Columbia Británica en Vancouver, Canadá.
 	 
 	     El proyecto, diseñado por Nikken Sekkei, buscará combinar una proporción de 9 a 1 de madera y acero para la particular estructura solicitada por Sumitomo para celebrar el 350 aniversario de la compañía en 2041 con una estructura que transforme a Tokio en un bosque.
 	 
