--- a/Practicas/Ej02/DiarioLN.html
+++ b/Practicas/Ej02/DiarioLN.html
@@ -23,13 +23,13 @@
 	   </div>
 	 
 	   <div id="texto">
-	 	 <p><span class="capital">E</span>l constructor y desarrollador inmobiliario <a href="http://sfc.jp/english/business/">Sumitomo Forestry</a>, especializado en la industria forestal, planea tener para las próximas décadas el ambicioso objetivo de desarrollar un torre rascacielos de 350 metros de altura. Como referencia, el edificio más alto de Buenos Aires será el Alvear Tower, una construcción tradicional de 235 metros, mientras que el edificio más alto de madera es el Brock Commons Tallwood House, un edificio de 53 metros de altura ubicado en la Universidad de Columbia Británica en Vancouver, Canadá.
+	 	 <p><span class="capital">E</span>l constructor y desarrollador inmobiliario <a href="http://sfc.jp/english/business/">Sumitomo Forestry</a>, especializado en la industria forestal, planea tener para las próximas décadas el ambicioso objetivo de desarrollar un torre rascacielos de 350 metros de altura. Como referencia, el edificio más alto de Buenos Aires será el Alvear Tower, una construcción tradicional de 235 metros, mientras que el edificio más alto de madera es el Brock Commons Tallwood House, un edificio de 53 metros de altura ubicado en la Universidad de Columbia Británica en Vancouver, Canadá.</p>
 	 
-	     El proyecto, diseñado por Nikken Sekkei, buscará combinar una proporción de 9 a 1 de madera y acero para la particular estructura solicitada por Sumitomo para celebrar el 350 aniversario de la compañía en 2041 con una estructura que transforme a Tokio en un bosque.
-	 
-	     La estructura de la torre de madera más alta del mundo cumplirá con los reglamentos antisismicos para este tipo de edificios y se destinará para un hotel, oficinas, residencias y tiendas. Su costo estimado será de unos 5,9 mil millones de dólares.s
-	 
-	    Cuando finalice, la torre de Sumitomo Forestry no sólo será la más alta del mundo, sino que también superará a los rascacielos tradicionales de todo Japón.</p>
+	     <p>El proyecto, diseñado por Nikken Sekkei, buscará combinar una proporción de 9 a 1 de madera y acero para la particular estructura solicitada por Sumitomo para celebrar el 350 aniversario de la compañía en 2041 con una estructura que transforme a Tokio en un bosque.</p>
+	     
+	     <p>La estructura de la torre de madera más alta del mundo cumplirá con los reglamentos antisismicos para este tipo de edificios y se destinará para un hotel, oficinas, residencias y tiendas. Su costo estimado será de unos 5,9 mil millones de dólares.</p>
+	     
+	     <p>Cuando finalice, la torre de Sumitomo Forestry no sólo será la más alta del mundo, sino que también superará a los rascacielos tradicionales de todo Japón.</p>
 	   </div>
 
 	   <div class="bloque1" id= piefoto2>
