ejercicios en clase

--- a/Practicas/Ej04/index.html
+++ b/Practicas/Ej04/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="css/estilo.css">
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<title></title>
 </head>
 <body>
 	<header>
+		<div id="perrouno">
 		   <img src="imgs/perro.jpg">
-		   <h1>¿Qué onda?</h1> 
+		</div>
+		   <h1>¿Qué onda?</h1>
+		<div id="perrodos">   
 		   <img src="imgs/perro.jpg">
+		</div>
 	</header>
 
 	<nav>
@@ -23,24 +29,29 @@
 
 	<section class="rosa">
 		<article>
-			<a href="">lala</a>
+			<a href=""></a>
 		</article>
 		<article>
-			<a href="">lele</a>
+			<a href=""></a>
 		</article>
 	</section>
 
 	<section class="azul">
+		<div id="perroazul">
 		    <img src="imgs/perro.jpg">
+		</div>
 	</section>
 
 	<section class="verde">
-		<article><a href="">uno</a></article>
-		<article><a href="">dos</a></article>
-		<article><a href="">tres</a></article>
+		<article><a href=""></a></article>
+		<article><a href=""></a></article>
+		<article><a href=""></a></article>
 	</section>
 
 	<footer>
+		<div id="gmaps">
+			<img width="100px" height="100px" src="imgs/gmaps.png">
+		</div>
 		<p>footer</p>
 	</footer>
 
