--- a/TPs/TP0/index.html
+++ b/TPs/TP0/index.html
@@ -2,11 +2,14 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<title>Coming Soon</title>
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
 <body>
 	<div class="Container">
+		<header>
+			<div class="Container">
 		<header>
 			<img src="imgs/comingsoon.jpg" alt="comingsoon">
 		</header>
