--- a/TPs/TP3/index.html
+++ b/TPs/TP3/index.html
@@ -2,26 +2,47 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
     <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="css/jquery-ui.min.css">
     <title>TP-2 Memotest</title>
 </head>
 <body>
+    <div id="popup" class="invisible">
+        <div id="nombreInput">
+            <label for="">Igresa tu nombre: </label>
+            <input type="text" id="nombre">
+        </div>
+        <div id="nivelDiv">
+            <label for="">Elegí un nivel:</label>
+            <select name="nivel" id="nivel" placeholder="Nivel">
+                <option value="Fácil">Fácil</option>
+                <option value="Intermedio">Intermedio</option>
+                <option value="Experto">Experto</option>
+            </select>
+        </div>
+        <div id="botón">
+            <button id="jugarbtn">Jugar</button>
+        </div>
+    </div>
     <div id="contenedor">
         <section id="izquierda">
             <h1>Memotest Holístico</h1>
             <div id="instrucciones">
                 <h2>Instrucciones:</h2>
-                <p>- Haz click en una ficha</p>
-                <p>- Busca su compañera</p>
-                <p>- Forma todos los pares que puedas en la menor cantidad de pasos</p>
-                <p>- A disfrutar del juego</p>
+                <p>Haz click en una ficha</p>
+                <p>Busca su compañera</p>
+                <p>Forma todos los pares que puedas en la menor cantidad de pasos</p>
+                <p>A disfrutar del juego</p>
+                <button id="comenzar">Comenzar</button>
             </div>
-            <div id="nombre"></div>
-            <div id="movimientos"></div>
+            <div id="nombreDiv"></div>
+            <div id="dataJuego" class="invisible">
+                <h3>Nivel <span id="nivelSpan"></span>: <span id="numClickSpan"></span> moviemientos</h3>
+                <h3>Puntaje: <span id="puntosSpan"></span></h3>
+            </div>
         </section>
-        <section id="derecha">
+        <section id="derecha" class="noPointer">
             <div class="tablero">
                     <div id="ficha0" class="back"></div>
                     <div id="ficha1" class="back"></div>
@@ -44,6 +65,7 @@
     </div>
 
     <script type="text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript" src="js/jquery-ui.min.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
