--- a/TPs/TP3/index.html
+++ b/TPs/TP3/index.html
@@ -8,7 +8,7 @@
     <title>TP-2 Memotest</title>
 </head>
 <body>
-    <div id="popup" class="invisible">
+    <div title="¡Bienvenidx!" id="popup" class="dialogo invisible">
         <div id="nombreInput">
             <label for="">Igresa tu nombre: </label>
             <input type="text" id="nombre">
@@ -22,7 +22,7 @@
             </select>
         </div>
         <div id="botón">
-            <button id="jugarbtn">Jugar</button>
+            <button id="jugarbtn" class="botones">Jugar</button>
         </div>
     </div>
 
@@ -31,15 +31,15 @@
             <h1>Memotest Holístico</h1>
             <div id="instrucciones">
                 <h2>Instrucciones:</h2>
-                <p>Haz click en una ficha</p>
-                <p>Busca su compañera</p>
-                <p>Forma todos los pares que puedas en la menor cantidad de pasos</p>
-                <p>A disfrutar del juego</p>
-                <button id="comenzar">Comenzar</button>
+                <p>- Haz click en una ficha</p>
+                <p>- Busca su compañera</p>
+                <p>- Forma todos los pares que puedas en la menor cantidad de pasos</p>
+                <p>- A disfrutar del juego</p>
+                <button id="comenzar" class="botones">Comenzar</button>
             </div>
             <div id="nombreDiv"></div>
             <div id="dataJuego" class="invisible">
-                <h3>Nivel <span id="nivelSpan"></span>: <span id="numClickSpan"></span> moviemientos</h3>
+                <h3>Nivel <span id="nivelSpan"></span>: <span id="numClickSpan"></span> moviemientos,</h3>
                 <h3>Puntaje: <span id="puntosSpan"></span></h3>
             </div>
         </section>
@@ -66,21 +66,21 @@
         </section>
     </div>
 
-    <div title="¡Ganaste!" id="ganador" class="invisible">
+    <div title="¡Ganaste!" id="ganador" class="dialogo invisible">
         <div>
-            <button class="ranking">Ranking</button>
-            <button class="nuevoJuego">Nuevo juego</button>
+            <button class="rankingbtn" class="botones">Ranking</button>
+            <button class="nuevoJuego" class="botones">Nuevo juego</button>
         </div>
      </div>
 
-     <div title="Perdiste :(" id="perdedor" class="invisible">
+     <div title="Perdiste :(" id="perdedor" class="dialogo invisible">
         <div>
-            <button class="ranking">Ranking</button>
-            <button class="nuevoJuego">Nuevo juego</button>
+            <button class="rankingbtn botones">Ranking</button>
+            <button class="nuevoJuego botones">Nuevo juego</button>
         </div>
      </div>
 
-     <div title="Ranking" id="rankingDiv" class="invisible"></h1></div>
+     <div title="Ranking" id="rankingDiv" class="dialogo invisible"></div>
 
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/jquery-ui.min.js"></script>
