--- a/Practicas/Modulo2/Ej02_Diario/diarioLaNacion.html
+++ b/Practicas/Modulo2/Ej02_Diario/diarioLaNacion.html
@@ -15,7 +15,7 @@
 	   </div>
      
        <div class= "bloque1" id= piefoto1>
-	     <img src="imgs/foto1.jpg" alt="imagen1">
+	     <img src="imagenes/foto1.jpg" alt="imagen1">
 	     <p>Tendrá 350 metros de altura y será la más alta en su tipo, con una construcción cuya estructura combina nueve partes de madera y una de acero</p>
 	   </div>
 	   <br/>
@@ -35,7 +35,7 @@
 	   
 
 	   <div class="bloque1" id= piefoto2>
-	 	 <img src="imgs/foto2.jpg" alt="foto2">
+	 	 <img src="imagenes/foto2.jpg" alt="foto2">
 	     <p>El proyecto deberá superar las estrictas normas japonesas que restringen el uso de la madera para evitar incendios</p>
 	   </div>
 
