--- a/Practicas/Modulo2/Ej05_Formulario/formulario.html
+++ b/Practicas/Modulo2/Ej05_Formulario/formulario.html
@@ -2,42 +2,55 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="css/estilos">
+	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 	<title>Formulario</title>
 </head>
 <body>
-	<h1>Formulario</h1>
+	<div id="main">
+		<form action="" method="">
+			<div>
+				<label>Nombre</label>
+				<input type="text" class="text" name="Nombre">
 
-    <section>
-    	<form action="" method="">
-    		<p>Nombre</p>
-    		<input type="text" name="Nombre">
+				<label>Apellido</label>
+				<input type="text" class="text" name="Apellido">
 
-    		<p>Apellido</p>
-    		<input type="text" name="Apellido">
+				<label>Email</label>
+				<input type="text" class="text" name="Email">
+			</div>
+			
+			<div class="radio">
+				<p>Genero</p>
+				<input type="radio" name="genero" id="femenino">
+				<label for="femenino">Femenino</label>
+				<input type="radio" name="genero" id="masculino">
+				<label for="masculino">Masculino</label>
+			</div>
 
-    		<p>Email</p>
-    		<input type="text" name="Email">
+			<div class="checkbox">
+				<p>Temas que le interesan</p>
+				<input type="checkbox" name="checkbox" id="cbox1">
+				<label for="cbox1">Infraestructura</label>
 
-    		<p>Genero</p>
-    		<input type="radio" name="Genero" value="F">Femenino
-    		<input type="radio" name="Genero" value="M">Masculino
+				<input type="checkbox" name="checkbox" id="cbox2">
+				<label for="cbox2">Programación web</label>
 
-    		<p>Temas que le interesan</p>
-    		<input type="checkbox" id="cbox1" value="Infraestructura"> Infraestructura <br/>
-    		<input type="checkbox" id="cbox1" value="Programación web"> Programación webv<br/>
-    		<input type="checkbox" id="cbox1" value="Programación mobile"> Programación mobile
-    		<br/><br/>
-    		<input type="checkbox" id="cbox1" value="Acepta"> Acepta los términos y condiciones
-    		<br/><br/>
+				<input type="checkbox" name="checkbox" id="cbox3">
+				<label for="cbox3">Programación mobile</label>
+			</div>
 
-            <div>
-    		<input type="submit" value="Cancelar">
-    		<input type="submit" value="Aceptar">
-    	    </div>
+			<div class="checkbox">
+				<input type="checkbox" name="checkbox" id="terms">
+				<label for="terms">Acepta los términos y condiciones</label>
+			</div>
 
-	    </form>
-    </section>
+			<div>
+				<input type="submit" value="Cancelar" class="button">
+				<input type="submit" value="Aceptar" class="button">
+			</div>
 
+		</form>
+	</div>
 </body>
 </html>
